# exotic-knob

./: .gitignore  README.md  justfile  pyproject.toml  run.sh
docs/domains/: domain-map.md  registry.md
docs/domains/amplifier-control/: domain.md
docs/domains/cli-runtime/: domain.md
docs/domains/configuration/: domain.md
docs/domains/device-input/: domain.md
docs/domains/platform-adapter/: domain.md
docs/domains/volume-policy/: domain.md
docs/how/: anticater-capture.md  bluos-readonly-harness.md  fixture-format.md  hid-capabilities.md
docs/plans/001-bluetooth-input-baseline/: .the-flow-state.json  backpressure-coverage.md  bluetooth-input-baseline-plan.md  bluetooth-input-baseline-spec.md  bluetooth-input-baseline.fltplan.md  execution.log.md  original-ask.md  research-dossier.md  the-flow.json  the-flow.md
docs/project-rules/: constitution.md  engineering-harness.md  idioms.md  rules.md
scripts/: bluos_mute.py  bluos_readonly.py  bluos_source.py  bluos_volume_step.py  capture_anticater_gestures.sh  check_boundaries.py  exotic_daemon.py
src/exotic_knob/: __init__.py
src/exotic_knob/cli/: __init__.py  main.py
src/exotic_knob/configuration/: __init__.py  profiles.py
src/exotic_knob/device_input/: __init__.py  contracts.py  (+3 more)
tests/integration/: test_cli_errors.py  test_cli_list.py  test_cli_replay.py
tests/unit/: test_bluos_mute.py  test_bluos_readonly.py  test_bluos_source.py  test_bluos_volume_step.py  test_exotic_daemon.py  test_fake_hid_reader.py  test_fixture_schema.py  test_hidapi_reader.py  test_normalizer.py  test_profiles.py
(+13 files in other folders)
